--- a/css/index.css
+++ b/css/index.css
@@ -138,3 +138,69 @@ nav{
     background-color: #266035;
     
 }
+
+section{
+    padding:4% 0;
+}
+
+/*about section styles*/
+#about{
+    height:80vh;
+    background-image: url('../images/about-img.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display:flex;
+    justify-content: flex-end;
+}
+
+#about .txt{
+    width:25%;
+    margin-right:10%;
+    align-items: center;
+}
+
+/*shop section styles*/
+.container{
+    display: flex;
+    flex-wrap:wrap;
+}
+
+.shoptxt, .bgimg{
+        width:50%;
+    
+}
+
+.shoptxt{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:6% 4%;
+    text-align: center;
+}
+
+.shoptxt div{
+    width:65%;
+}
+
+.shoptxt div button{
+    margin-top: 5%;
+}
+
+.bgimg{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.succulants{
+    background-image:url('../images/succulants.jpg');
+}
+
+.cacti{
+    background-image:url('../images/cacti.jpg');
+}
+
+.tropicals{
+    background-image:url('../images/tropicals.jpg');
+}
